src/objects/Answer_MERC__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Text_MERC__c</fullName>
        <description>Holds the answer text for each possible Answer for any given Registration Question</description>
        <inlineHelpText>The answer text displayed to the user e.g. &quot;Monday Lunch&quot;</inlineHelpText>
        <label>Answer Text</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <description>Pulls down meeting id. Used by trigger to pass to locked record handler</description>
        <formula>Registration_Question_MERC__r.Meeting_MERC__c</formula>
        <label>Meeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Set via workflow for integration with external systems : MERC : Created on 27/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number_MERC__c</fullName>
        <description>Used to Order the Answers for usabilty : MERC : Created on 13/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Use the order to sequence the Answers as they&apos;re shown to the HCP/User.</inlineHelpText>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>